import React from 'react'
import * as ReactDOM from 'react-dom'
import * as reactRedux from 'react-redux'

import Firmwares, { getFileName, getFileSize } from '.'

import FirmwaresMenu from 'pages/Firmwares/MenuComponent'
import * as i18n from 'shared/i18n'

describe('Firmwares component', () => {
  beforeAll(() => {
    ReactDOM.createPortal = jest.fn((element, node) => {
      return element
    })
  })

  afterEach(() => {
    ReactDOM.createPortal.mockClear()
  })
  let dispatchMock
  beforeEach(() => {
    dispatchMock = jest.fn()
    jest.spyOn(reactRedux, 'useDispatch').mockImplementation(() => dispatchMock)
    jest.spyOn(i18n, 'useI18n').mockImplementation(() => (key, ...params) => {
      return `${key.toUpperCase()} ${params.join('_')}`.trim()
    })
  })

  test('render correctly', () => {
    const { component } = mountWithProvider(<Firmwares />)({
      fileDownloader: {
        pvs5Fw: {
          status: 'error',
          size: 0,
          lastModified: 0,
          error: '',
          progress: 0,
          name: '',
          exists: false,
          updateURL: '',
          version: undefined,
          step: ''
        },
        progress: {
          progress: 0,
          lastProgress: 0,
          downloading: false
        },
        pvs6GridProfileInfo: {
          progress: 0,
          lastProgress: 0,
          lastModified: null
        },
        pvs5GridProfileInfo: {
          progress: 0,
          lastProgress: 0,
          lastModified: null
        },
        fileInfo: {
          name: 'test-file.zip',
          error: '',
          step: 'INITIALIZING',
          displayName: 'test-file'
        }
      },
      ess: {
        error: null,
        isDownloading: false,
        file: { name: 'test file name' },
        step: 'INITIALIZING'
      }
    })
    expect(component).toMatchSnapshot()
  })
  it('should type-safe the file name', () => {
    const displayName = 'file name - 9810'
    let fileInfoObj = { displayName }
    expect(getFileName(fileInfoObj)).toBe('9810')
    fileInfoObj = {}
    expect(getFileName(fileInfoObj)).toBe(undefined)
  })
  it('should type-safe the file name', () => {
    const size = 20
    let fileInfoObj = { size }
    expect(getFileSize(fileInfoObj)).toBe(size)
    fileInfoObj = {}
    expect(getFileSize(fileInfoObj)).toBe(undefined)
  })
})

describe('Firmwares Menu component', () => {
  beforeAll(() => {
    ReactDOM.createPortal = jest.fn((element, node) => {
      return element
    })
  })

  afterEach(() => {
    ReactDOM.createPortal.mockClear()
  })
  let dispatchMock
  beforeEach(() => {
    dispatchMock = jest.fn()
    jest.spyOn(reactRedux, 'useDispatch').mockImplementation(() => dispatchMock)
    jest.spyOn(i18n, 'useI18n').mockImplementation(() => (key, ...params) => {
      return `${key.toUpperCase()} ${params.join('_')}`.trim()
    })
  })

  test('render correctly', () => {
    const { component } = mountWithProvider(<FirmwaresMenu />)({
      fileDownloader: {
        progress: {
          progress: 0,
          lastProgress: 0,
          downloading: false
        },
        pvs6GridProfileInfo: {
          progress: 0,
          lastProgress: 0,
          lastModified: null
        },
        pvs5GridProfileInfo: {
          progress: 0,
          lastProgress: 0,
          lastModified: null
        },
        fileInfo: {
          name: 'test-file.zip',
          error: '',
          step: 'INITIALIZING',
          displayName: 'test-file'
        }
      },
      ess: {
        error: null,
        isDownloading: false,
        file: { name: 'test file name' },
        step: 'INITIALIZING'
      }
    })
    expect(component).toMatchSnapshot()
  })
})
